--- a/resources/styles/reset.css
+++ b/resources/styles/reset.css
@@ -33,7 +33,3 @@ html body {
     line-height: 1.5;
 }
 
-table, tr, th, td {
-    border: .1rem solid white;
-}
-
